# solanum

./: Cargo.toml  LICENSE-MIT  readme.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: lib.rs  queue.rs  stack.rs
src/node/: mod.rs  unidirectional.rs
src/node/unidirectional/: immutable_node.rs  mod.rs  mutable_node.rs
src/queue/: mod.rs  queue.rs  unidirectional_node.rs
