[package]
name = "solanum"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of memory-safe linear data structure"
repository = "https://github.com/rahmatnazali/solanum"
readme = "readme.md"
keywords = ["linear", "data", "structure"]
exclude = [
    ".idea/*",
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
